# bertram

./: .gitignore  .vscodeignore  CHANGELOG.md  README.adoc  README.html  README.md  build.sh  package.json  pyproject.toml  vsc-extension-quickstart.md
archive/: bertram-dark-color-theme.json  bertram-light-color-theme.json
assets/: icon.pages
gen_theme/: common.py  merge_existing_light_dark.py  split_themes.py  theme_types.py  themes_light_dark.json
themes/: bertram-dark-color-theme.json  bertram-light-color-theme.json
