[tool.poetry]
name = "betram-vscode-theme"
version = "0.1.0"
description = ""
authors = ["Robert Bennett <rltbennett@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.10"
json5 = "^0.9.10"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
jupyter = "^1.0.0"
ipython = "^8.7.0"
ipykernel = "^6.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
